--- a/Page Wire/BookDetail/Views/BookDetailsTableViewCell.xib
+++ b/Page Wire/BookDetail/Views/BookDetailsTableViewCell.xib
@@ -6,34 +6,45 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BookDetailsTableViewCell" rowHeight="448" id="KGk-i7-Jjw" customClass="BookDetailsTableViewCell" customModule="Page_Wire" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="430"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BookDetailsTableViewCell" rowHeight="460" id="KGk-i7-Jjw" customClass="BookDetailsTableViewCell" customModule="Page_Wire" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="442"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="430"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="442"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oez-HV-vBX">
-                        <rect key="frame" x="112.66666666666669" y="3" width="150" height="194"/>
-                        <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5ae-et-Nta" userLabel="Artwork Container View">
+                        <rect key="frame" x="112.66666666666669" y="4" width="150" height="200"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oez-HV-vBX">
+                                <rect key="frame" x="0.0" y="3" width="150" height="194"/>
+                                <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <imageReference key="image" image="book.fill" catalog="system" symbolScale="small"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="200" id="qIf-DP-U5W"/>
-                            <constraint firstAttribute="width" constant="150" id="yCL-El-SOc"/>
+                            <constraint firstItem="oez-HV-vBX" firstAttribute="width" secondItem="5ae-et-Nta" secondAttribute="width" id="77i-3M-dLV"/>
+                            <constraint firstItem="oez-HV-vBX" firstAttribute="centerY" secondItem="5ae-et-Nta" secondAttribute="centerY" id="H84-BS-fkL"/>
+                            <constraint firstItem="oez-HV-vBX" firstAttribute="centerX" secondItem="5ae-et-Nta" secondAttribute="centerX" id="JiO-Ad-A5y"/>
+                            <constraint firstAttribute="height" constant="200" id="Mi3-vi-eMp"/>
+                            <constraint firstAttribute="width" constant="150" id="nce-K1-LhB"/>
+                            <constraint firstItem="oez-HV-vBX" firstAttribute="height" secondItem="5ae-et-Nta" secondAttribute="height" id="o3F-Fw-P5G"/>
                         </constraints>
-                        <imageReference key="image" image="book.fill" catalog="system" symbolScale="small"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="8"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </imageView>
+                    </view>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="IwY-iT-fbD">
-                        <rect key="frame" x="16" y="216" width="343" height="175.33333333333337"/>
+                        <rect key="frame" x="16" y="220" width="343" height="175.33333333333337"/>
                         <subviews>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="beN-An-fIL">
                                 <rect key="frame" x="0.0" y="0.0" width="343" height="24"/>
@@ -112,17 +123,18 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="oez-HV-vBX" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="1UZ-v4-hdA"/>
+                    <constraint firstItem="5ae-et-Nta" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="4VA-SH-ffq"/>
+                    <constraint firstItem="IwY-iT-fbD" firstAttribute="top" secondItem="5ae-et-Nta" secondAttribute="bottom" constant="16" id="RF1-L4-e8b"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="IwY-iT-fbD" secondAttribute="bottom" constant="16" id="gtJ-J9-rrO"/>
-                    <constraint firstItem="IwY-iT-fbD" firstAttribute="top" secondItem="oez-HV-vBX" secondAttribute="bottom" constant="16" id="ist-4N-I0Q"/>
                     <constraint firstAttribute="trailing" secondItem="IwY-iT-fbD" secondAttribute="trailing" constant="16" id="k24-ke-5Xn"/>
-                    <constraint firstItem="oez-HV-vBX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="nfK-UT-ZcL"/>
                     <constraint firstItem="IwY-iT-fbD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="uQJ-XV-RGM"/>
+                    <constraint firstItem="5ae-et-Nta" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="vlD-Xg-vad"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="artwork" destination="oez-HV-vBX" id="uWq-OJ-UA2"/>
+                <outlet property="artworkContainerView" destination="5ae-et-Nta" id="iyL-Z1-rE9"/>
                 <outlet property="authorLabel" destination="UqD-fh-fSc" id="7PB-6b-eiK"/>
                 <outlet property="bookInfoButton" destination="3Oh-zA-J9e" id="9bQ-n8-83q"/>
                 <outlet property="genresLabel" destination="AaH-F3-XAR" id="rAK-8A-qw8"/>
@@ -131,11 +143,14 @@
                 <outlet property="selectPublisherButton" destination="klM-Un-hTw" id="QlO-lV-o0x"/>
                 <outlet property="titleLabel" destination="beN-An-fIL" id="vPF-V6-TDg"/>
             </connections>
-            <point key="canvasLocation" x="200.76923076923077" y="-29.14691943127962"/>
+            <point key="canvasLocation" x="200.76923076923077" y="-24.881516587677723"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="arrowtriangle.down.fill" catalog="system" width="128" height="124"/>
         <image name="book.fill" catalog="system" width="128" height="95"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
