--- a/Page Wire/BookResults/Views/BookResultsCollectionViewCell.xib
+++ b/Page Wire/BookResults/Views/BookResultsCollectionViewCell.xib
@@ -22,15 +22,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="274" height="373"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9jE-iw-gq1">
-                                <rect key="frame" x="62" y="41" width="150" height="197.5"/>
+                                <rect key="frame" x="82" y="41" width="110" height="184"/>
                                 <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="ia8-AK-FGW"/>
-                                    <constraint firstAttribute="height" constant="200" id="l7Z-Dt-7bf"/>
-                                </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="I2q-bA-Fxv">
-                                <rect key="frame" x="16" y="272" width="242" height="58"/>
+                                <rect key="frame" x="16" y="250.5" width="242" height="58"/>
                                 <subviews>
                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PQT-D9-tLL">
                                         <rect key="frame" x="0.0" y="0.0" width="242" height="24"/>
@@ -50,12 +46,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="9jE-iw-gq1" firstAttribute="top" secondItem="bGo-K8-bqm" secondAttribute="top" constant="40" id="00w-yB-eYx"/>
-                            <constraint firstItem="I2q-bA-Fxv" firstAttribute="top" secondItem="9jE-iw-gq1" secondAttribute="bottom" constant="32" id="7GZ-Va-N5u"/>
+                            <constraint firstItem="I2q-bA-Fxv" firstAttribute="top" secondItem="9jE-iw-gq1" secondAttribute="bottom" constant="24" id="7GZ-Va-N5u"/>
                             <constraint firstAttribute="trailing" secondItem="I2q-bA-Fxv" secondAttribute="trailing" constant="16" id="OaV-my-0zB"/>
                             <constraint firstItem="9jE-iw-gq1" firstAttribute="centerX" secondItem="bGo-K8-bqm" secondAttribute="centerX" id="cfC-AJ-xCP"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="I2q-bA-Fxv" secondAttribute="bottom" constant="32" id="fff-RY-VAD"/>
+                            <constraint firstItem="9jE-iw-gq1" firstAttribute="width" secondItem="bGo-K8-bqm" secondAttribute="width" multiplier="0.4" id="foX-rJ-pqA"/>
                             <constraint firstItem="I2q-bA-Fxv" firstAttribute="centerX" secondItem="bGo-K8-bqm" secondAttribute="centerX" id="g0z-5g-QNo"/>
                             <constraint firstItem="I2q-bA-Fxv" firstAttribute="leading" secondItem="bGo-K8-bqm" secondAttribute="leading" constant="16" id="xst-Ua-cQb"/>
+                            <constraint firstItem="9jE-iw-gq1" firstAttribute="height" secondItem="bGo-K8-bqm" secondAttribute="height" multiplier="0.5" id="zbT-4U-af3"/>
                         </constraints>
                     </view>
                 </subviews>
